--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,6 +58,6 @@ footer {
 }
 
 .card {
-  box-shadow: 0px 2px 7px rgba(214,51,132,0.33);
+  box-shadow: 0px 0px 16px 2px rgba(108,117,125,0.5);
 }
 
