--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,7 +43,7 @@ p, a, h1, h2, h3, h4, h5, h6 {
 }
 
 .navigation-clean {
-  background: var(--bs-gray-100);
+  background: rgba(255,255,255,0.33);
 }
 
 body {
@@ -59,5 +59,16 @@ footer {
 
 .card {
   box-shadow: 0px 0px 16px 2px rgba(108,117,125,0.5);
+}
+
+.section_title {
+}
+
+.section_heading {
+  color: var(--bs-white);
+  background: var(--bs-gray-500);
+  border-radius: 4px;
+  padding: 6px;
+  font-weight: bold;
 }
 
